// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class-properties live-rewrite 1`] = `
"var _anywhere = require('anywhere');
class Example {
  #test1 = _anywhere.test1;
  test2 = _anywhere.test2;
  #test3() {
    return _anywhere.test3;
  }
  test4() {
    return _anywhere.test4;
  }
  get #test5() {
    return _anywhere.test5;
  }
  get test6() {
    return _anywhere.test6;
  }
  #test7 = this.#test1;
  #test8() {
    return this.#test3();
  }
  get #test9() {
    return this.#test5();
  }
}"
`;

exports[`class-properties private 1`] = `
"class Example {
  #property = this;
}"
`;

exports[`class-properties private-method 1`] = `
"class Example {
  #method() {
    console.log(this);
  }
}"
`;

exports[`class-properties public 1`] = `
"class Example {
  property = this;
}"
`;

exports[`disable-strict-mode strictMode-false 1`] = `
"require("foo");
require("foo-bar");
require("./directory/foo-bar");"
`;

exports[`importInterop-none export-from 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return function (m) {
      return m && m.__esModule ? m.default : m;
    }(_foo);
  }
});
var _foo = require('foo');"
`;

exports[`importInterop-none import-default-only 1`] = `
"var foo = _$$_IMPORT_DEFAULT("foo");
foo();"
`;

exports[`importInterop-none import-wildcard 1`] = `
"var foo = _$$_IMPORT_ALL('foo');
foo.bar();
foo.baz();"
`;

exports[`interop export-all 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _exportedNames = {};
var _react = require('react');
Object.keys(_react).forEach(function (_key) {
  if (_key === "default" || _key === "__esModule") return;
  if (Object.prototype.hasOwnProperty.call(_exportedNames, _key)) return;
  if (_key in exports && exports[_key] === _react[_key]) return;
  Object.defineProperty(exports, _key, {
    enumerable: true,
    get: function () {
      return _react[_key];
    }
  });
});
var _default = _$$_IMPORT_DEFAULT('react');
var _default2 = _default; // The fact that this exports both a normal default, and all of the names via
// re-export is an edge case that is important not to miss. See
// https://github.com/babel/babel/issues/8306 as an example.

exports.default = _default2;"
`;

exports[`interop export-default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _default = 42;
exports.default = _default;"
`;

exports[`interop export-default-2 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _default = {};
exports.default = _default;"
`;

exports[`interop export-default-3 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _default = [];
exports.default = _default;"
`;

exports[`interop export-default-4 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _default = foo;
exports.default = _default;"
`;

exports[`interop export-default-5 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _default() {}
exports.default = _default;"
`;

exports[`interop export-default-6 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
class _default {}
exports.default = _default;"
`;

exports[`interop export-default-7 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function foo() {}
exports.default = foo;"
`;

exports[`interop export-default-8 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
class Foo {}
exports.default = Foo;"
`;

exports[`interop export-default-9 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var foo;
exports.default = foo;"
`;

exports[`interop export-default-10 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _default = function () {
  return "foo";
}();
exports.default = _default;"
`;

exports[`interop export-default-11 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _default = new Cacher();
function Cacher(databaseName) {}
exports.Cacher = Cacher;
exports.default = _default;"
`;

exports[`interop export-destructured 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
let x = 0;
let y = 0;
function f1() {
  ({
    x
  } = {
    x: 1
  });
}
function f2() {
  ({
    x,
    y
  } = {
    x: 2,
    y: 3
  });
}
function f3() {
  [x, y, z] = [3, 4, 5];
}
function f4() {
  [x,, y] = [3, 4, 5];
}
exports.x = x;
exports.y = y;
exports.f1 = f1;
exports.f2 = f2;
exports.f3 = f3;
exports.f4 = f4;"
`;

exports[`interop export-from 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _exportedNames = {};
var _foo = require("foo");
Object.keys(_foo).forEach(function (_key) {
  if (_key === "default" || _key === "__esModule") return;
  if (Object.prototype.hasOwnProperty.call(_exportedNames, _key)) return;
  if (_key in exports && exports[_key] === _foo[_key]) return;
  Object.defineProperty(exports, _key, {
    enumerable: true,
    get: function () {
      return _foo[_key];
    }
  });
});"
`;

exports[`interop export-from-2 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
var _foo = require("foo");"
`;

exports[`interop export-from-3 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return _foo.bar;
  }
});
var _foo = require("foo");"
`;

exports[`interop export-from-4 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
var _foo = require("foo");"
`;

exports[`interop export-from-5 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
var _foo = require("foo");"
`;

exports[`interop export-from-6 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return _foo.bar;
  }
});
var _foo = require("foo");"
`;

exports[`interop export-from-7 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return function (m) {
      return m && m.__esModule ? m.default : m;
    }(_foo);
  }
});
var _foo = require("foo");"
`;

exports[`interop export-from-8 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
Object.defineProperty(exports, "foo1", {
  enumerable: true,
  get: function () {
    return _foo.foo1;
  }
});
Object.defineProperty(exports, "foo2", {
  enumerable: true,
  get: function () {
    return _foo.foo2;
  }
});
Object.defineProperty(exports, "foo3", {
  enumerable: true,
  get: function () {
    return _foo.foo3;
  }
});
Object.defineProperty(exports, "foo4", {
  enumerable: true,
  get: function () {
    return _foo.foo4;
  }
});
Object.defineProperty(exports, "foo5", {
  enumerable: true,
  get: function () {
    return _foo.foo5;
  }
});
Object.defineProperty(exports, "foo6", {
  enumerable: true,
  get: function () {
    return _foo.foo6;
  }
});
Object.defineProperty(exports, "foo7", {
  enumerable: true,
  get: function () {
    return _foo.foo7;
  }
});
Object.defineProperty(exports, "foo8", {
  enumerable: true,
  get: function () {
    return _foo.foo8;
  }
});
Object.defineProperty(exports, "foo9", {
  enumerable: true,
  get: function () {
    return _foo.foo9;
  }
});
Object.defineProperty(exports, "foo10", {
  enumerable: true,
  get: function () {
    return _foo.foo10;
  }
});
Object.defineProperty(exports, "foo11", {
  enumerable: true,
  get: function () {
    return _foo.foo11;
  }
});
Object.defineProperty(exports, "foo12", {
  enumerable: true,
  get: function () {
    return _foo.foo12;
  }
});
Object.defineProperty(exports, "foo13", {
  enumerable: true,
  get: function () {
    return _foo.foo13;
  }
});
Object.defineProperty(exports, "foo14", {
  enumerable: true,
  get: function () {
    return _foo.foo14;
  }
});
Object.defineProperty(exports, "foo15", {
  enumerable: true,
  get: function () {
    return _foo.foo15;
  }
});
Object.defineProperty(exports, "foo16", {
  enumerable: true,
  get: function () {
    return _foo.foo16;
  }
});
Object.defineProperty(exports, "foo17", {
  enumerable: true,
  get: function () {
    return _foo.foo17;
  }
});
Object.defineProperty(exports, "foo18", {
  enumerable: true,
  get: function () {
    return _foo.foo18;
  }
});
Object.defineProperty(exports, "foo19", {
  enumerable: true,
  get: function () {
    return _foo.foo19;
  }
});
Object.defineProperty(exports, "foo20", {
  enumerable: true,
  get: function () {
    return _foo.foo20;
  }
});
Object.defineProperty(exports, "foo21", {
  enumerable: true,
  get: function () {
    return _foo.foo21;
  }
});
Object.defineProperty(exports, "foo22", {
  enumerable: true,
  get: function () {
    return _foo.foo22;
  }
});
Object.defineProperty(exports, "foo23", {
  enumerable: true,
  get: function () {
    return _foo.foo23;
  }
});
Object.defineProperty(exports, "foo24", {
  enumerable: true,
  get: function () {
    return _foo.foo24;
  }
});
Object.defineProperty(exports, "foo25", {
  enumerable: true,
  get: function () {
    return _foo.foo25;
  }
});
Object.defineProperty(exports, "foo26", {
  enumerable: true,
  get: function () {
    return _foo.foo26;
  }
});
Object.defineProperty(exports, "foo27", {
  enumerable: true,
  get: function () {
    return _foo.foo27;
  }
});
Object.defineProperty(exports, "foo28", {
  enumerable: true,
  get: function () {
    return _foo.foo28;
  }
});
Object.defineProperty(exports, "foo29", {
  enumerable: true,
  get: function () {
    return _foo.foo29;
  }
});
Object.defineProperty(exports, "foo30", {
  enumerable: true,
  get: function () {
    return _foo.foo30;
  }
});
Object.defineProperty(exports, "foo31", {
  enumerable: true,
  get: function () {
    return _foo.foo31;
  }
});
Object.defineProperty(exports, "foo32", {
  enumerable: true,
  get: function () {
    return _foo.foo32;
  }
});
Object.defineProperty(exports, "foo33", {
  enumerable: true,
  get: function () {
    return _foo.foo33;
  }
});
Object.defineProperty(exports, "foo34", {
  enumerable: true,
  get: function () {
    return _foo.foo34;
  }
});
Object.defineProperty(exports, "foo35", {
  enumerable: true,
  get: function () {
    return _foo.foo35;
  }
});
Object.defineProperty(exports, "foo36", {
  enumerable: true,
  get: function () {
    return _foo.foo36;
  }
});
Object.defineProperty(exports, "foo37", {
  enumerable: true,
  get: function () {
    return _foo.foo37;
  }
});
Object.defineProperty(exports, "foo38", {
  enumerable: true,
  get: function () {
    return _foo.foo38;
  }
});
Object.defineProperty(exports, "foo39", {
  enumerable: true,
  get: function () {
    return _foo.foo39;
  }
});
Object.defineProperty(exports, "foo40", {
  enumerable: true,
  get: function () {
    return _foo.foo40;
  }
});
Object.defineProperty(exports, "foo41", {
  enumerable: true,
  get: function () {
    return _foo.foo41;
  }
});
Object.defineProperty(exports, "foo42", {
  enumerable: true,
  get: function () {
    return _foo.foo42;
  }
});
Object.defineProperty(exports, "foo43", {
  enumerable: true,
  get: function () {
    return _foo.foo43;
  }
});
Object.defineProperty(exports, "foo44", {
  enumerable: true,
  get: function () {
    return _foo.foo44;
  }
});
Object.defineProperty(exports, "foo45", {
  enumerable: true,
  get: function () {
    return _foo.foo45;
  }
});
Object.defineProperty(exports, "foo46", {
  enumerable: true,
  get: function () {
    return _foo.foo46;
  }
});
Object.defineProperty(exports, "foo47", {
  enumerable: true,
  get: function () {
    return _foo.foo47;
  }
});
Object.defineProperty(exports, "foo48", {
  enumerable: true,
  get: function () {
    return _foo.foo48;
  }
});
Object.defineProperty(exports, "foo49", {
  enumerable: true,
  get: function () {
    return _foo.foo49;
  }
});
Object.defineProperty(exports, "foo50", {
  enumerable: true,
  get: function () {
    return _foo.foo50;
  }
});
Object.defineProperty(exports, "foo51", {
  enumerable: true,
  get: function () {
    return _foo.foo51;
  }
});
Object.defineProperty(exports, "foo52", {
  enumerable: true,
  get: function () {
    return _foo.foo52;
  }
});
Object.defineProperty(exports, "foo53", {
  enumerable: true,
  get: function () {
    return _foo.foo53;
  }
});
Object.defineProperty(exports, "foo54", {
  enumerable: true,
  get: function () {
    return _foo.foo54;
  }
});
Object.defineProperty(exports, "foo55", {
  enumerable: true,
  get: function () {
    return _foo.foo55;
  }
});
Object.defineProperty(exports, "foo56", {
  enumerable: true,
  get: function () {
    return _foo.foo56;
  }
});
Object.defineProperty(exports, "foo57", {
  enumerable: true,
  get: function () {
    return _foo.foo57;
  }
});
Object.defineProperty(exports, "foo58", {
  enumerable: true,
  get: function () {
    return _foo.foo58;
  }
});
Object.defineProperty(exports, "foo59", {
  enumerable: true,
  get: function () {
    return _foo.foo59;
  }
});
Object.defineProperty(exports, "foo60", {
  enumerable: true,
  get: function () {
    return _foo.foo60;
  }
});
Object.defineProperty(exports, "foo61", {
  enumerable: true,
  get: function () {
    return _foo.foo61;
  }
});
Object.defineProperty(exports, "foo62", {
  enumerable: true,
  get: function () {
    return _foo.foo62;
  }
});
Object.defineProperty(exports, "foo63", {
  enumerable: true,
  get: function () {
    return _foo.foo63;
  }
});
Object.defineProperty(exports, "foo64", {
  enumerable: true,
  get: function () {
    return _foo.foo64;
  }
});
Object.defineProperty(exports, "foo65", {
  enumerable: true,
  get: function () {
    return _foo.foo65;
  }
});
Object.defineProperty(exports, "foo66", {
  enumerable: true,
  get: function () {
    return _foo.foo66;
  }
});
Object.defineProperty(exports, "foo67", {
  enumerable: true,
  get: function () {
    return _foo.foo67;
  }
});
Object.defineProperty(exports, "foo68", {
  enumerable: true,
  get: function () {
    return _foo.foo68;
  }
});
Object.defineProperty(exports, "foo69", {
  enumerable: true,
  get: function () {
    return _foo.foo69;
  }
});
Object.defineProperty(exports, "foo70", {
  enumerable: true,
  get: function () {
    return _foo.foo70;
  }
});
Object.defineProperty(exports, "foo71", {
  enumerable: true,
  get: function () {
    return _foo.foo71;
  }
});
Object.defineProperty(exports, "foo72", {
  enumerable: true,
  get: function () {
    return _foo.foo72;
  }
});
Object.defineProperty(exports, "foo73", {
  enumerable: true,
  get: function () {
    return _foo.foo73;
  }
});
Object.defineProperty(exports, "foo74", {
  enumerable: true,
  get: function () {
    return _foo.foo74;
  }
});
Object.defineProperty(exports, "foo75", {
  enumerable: true,
  get: function () {
    return _foo.foo75;
  }
});
Object.defineProperty(exports, "foo76", {
  enumerable: true,
  get: function () {
    return _foo.foo76;
  }
});
Object.defineProperty(exports, "foo77", {
  enumerable: true,
  get: function () {
    return _foo.foo77;
  }
});
Object.defineProperty(exports, "foo78", {
  enumerable: true,
  get: function () {
    return _foo.foo78;
  }
});
Object.defineProperty(exports, "foo79", {
  enumerable: true,
  get: function () {
    return _foo.foo79;
  }
});
Object.defineProperty(exports, "foo80", {
  enumerable: true,
  get: function () {
    return _foo.foo80;
  }
});
Object.defineProperty(exports, "foo81", {
  enumerable: true,
  get: function () {
    return _foo.foo81;
  }
});
Object.defineProperty(exports, "foo82", {
  enumerable: true,
  get: function () {
    return _foo.foo82;
  }
});
Object.defineProperty(exports, "foo83", {
  enumerable: true,
  get: function () {
    return _foo.foo83;
  }
});
Object.defineProperty(exports, "foo84", {
  enumerable: true,
  get: function () {
    return _foo.foo84;
  }
});
Object.defineProperty(exports, "foo85", {
  enumerable: true,
  get: function () {
    return _foo.foo85;
  }
});
Object.defineProperty(exports, "foo86", {
  enumerable: true,
  get: function () {
    return _foo.foo86;
  }
});
Object.defineProperty(exports, "foo87", {
  enumerable: true,
  get: function () {
    return _foo.foo87;
  }
});
Object.defineProperty(exports, "foo88", {
  enumerable: true,
  get: function () {
    return _foo.foo88;
  }
});
Object.defineProperty(exports, "foo89", {
  enumerable: true,
  get: function () {
    return _foo.foo89;
  }
});
Object.defineProperty(exports, "foo90", {
  enumerable: true,
  get: function () {
    return _foo.foo90;
  }
});
Object.defineProperty(exports, "foo91", {
  enumerable: true,
  get: function () {
    return _foo.foo91;
  }
});
Object.defineProperty(exports, "foo92", {
  enumerable: true,
  get: function () {
    return _foo.foo92;
  }
});
Object.defineProperty(exports, "foo93", {
  enumerable: true,
  get: function () {
    return _foo.foo93;
  }
});
Object.defineProperty(exports, "foo94", {
  enumerable: true,
  get: function () {
    return _foo.foo94;
  }
});
Object.defineProperty(exports, "foo95", {
  enumerable: true,
  get: function () {
    return _foo.foo95;
  }
});
Object.defineProperty(exports, "foo96", {
  enumerable: true,
  get: function () {
    return _foo.foo96;
  }
});
Object.defineProperty(exports, "foo97", {
  enumerable: true,
  get: function () {
    return _foo.foo97;
  }
});
Object.defineProperty(exports, "foo98", {
  enumerable: true,
  get: function () {
    return _foo.foo98;
  }
});
Object.defineProperty(exports, "foo99", {
  enumerable: true,
  get: function () {
    return _foo.foo99;
  }
});
Object.defineProperty(exports, "foo100", {
  enumerable: true,
  get: function () {
    return _foo.foo100;
  }
});
var _foo = require("foo");"
`;

exports[`interop export-from-9 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "__proto__", {
  enumerable: true,
  get: function () {
    return _xyz.__proto__;
  }
});
var _xyz = require("xyz");"
`;

exports[`interop export-named 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var foo;
exports.foo = foo;"
`;

exports[`interop export-named-2 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var foo, bar;
exports.foo = foo;
exports.bar = bar;"
`;

exports[`interop export-named-3 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var foo;
exports.bar = foo;"
`;

exports[`interop export-named-4 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var foo;
exports.default = foo;"
`;

exports[`interop export-named-5 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var foo, bar;
exports.default = foo;
exports.bar = bar;"
`;

exports[`interop export-named-6 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _inputJs = require("./input.js");
const __proto__ = null;
const a = 1;
const _ = 2;
console.log(_inputJs.__proto__);
exports.__proto__ = __proto__;
exports.a = a;
exports._ = _;"
`;

exports[`interop exports-variable 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var foo = 1;
var foo2 = 1,
  bar = 2;
var foo3 = function () {};
var foo4;
let foo5 = 2;
let foo6;
const foo7 = 3;
function foo8() {}
class foo9 {}
exports.foo = foo;
exports.foo2 = foo2;
exports.bar = bar;
exports.foo3 = foo3;
exports.foo4 = foo4;
exports.foo5 = foo5;
exports.foo6 = foo6;
exports.foo7 = foo7;
exports.foo8 = foo8;
exports.foo9 = foo9;"
`;

exports[`interop hoist-function-exports 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _evens = require("./evens");
function nextOdd(n) {
  return _evens.isEven(n) ? n + 1 : n + 2;
}
var isOdd = function (isEven) {
  return function (n) {
    return !isEven(n);
  };
}(_evens.isEven);
exports.nextOdd = nextOdd;
exports.isOdd = isOdd;"
`;

exports[`interop illegal-export-esmodule 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var __esModule = false;
exports.__esModule = __esModule;"
`;

exports[`interop illegal-export-esmodule-2 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var __esModule;
exports.__esModule = __esModule;"
`;

exports[`interop imports 1`] = `
"require("foo");
require("foo-bar");
require("./directory/foo-bar");"
`;

exports[`interop imports-default 1`] = `
"var foo = _$$_IMPORT_DEFAULT("foo");
var foo2 = _$$_IMPORT_DEFAULT("foo");
foo;
foo2;"
`;

exports[`interop imports-glob 1`] = `"var foo = _$$_IMPORT_ALL("foo");"`;

exports[`interop imports-hoisting 1`] = `"tag\`foo\`;"`;

exports[`interop imports-mixing 1`] = `
"var _foo = require("foo");
var foo = _$$_IMPORT_DEFAULT("foo");
foo;
_foo.baz;"
`;

exports[`interop imports-named 1`] = `
"var _foo = require("foo");
_foo.bar;
_foo.bar2;
_foo.baz;
_foo.bar;
_foo.bar;
_foo.xyz;"
`;

exports[`interop imports-ordering 1`] = `
"require('./foo');
var bar = _$$_IMPORT_DEFAULT('./bar');
require('./derp');
var _qux = require('./qux');"
`;

exports[`interop module-shadow 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _module() {}
exports.module = _module;"
`;

exports[`interop multi-load 1`] = `"console.log(helper);"`;

exports[`interop overview 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
require("foo");
require("foo-bar");
require("./directory/foo-bar");
var foo = _$$_IMPORT_DEFAULT("foo2");
var foo2 = _$$_IMPORT_ALL("foo3");
var _foo = require("foo4");
var _foo2 = require("foo5");
var test;
var test2 = 5;
_foo.bar;
_foo2.foo;
foo;
exports.test = test;
exports.test2 = test2;"
`;

exports[`interop remap 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var test = 2;
test = 5;
test++;
(function () {
  var test = 2;
  test = 3;
  test++;
})();
var a = 2;
a = 3;
var b = 2;
b = 3;
var d = 3;
d = 4;
exports.test = test;
exports.a = a;
exports.c = b;
exports.e = d;
exports.f = d;"
`;

exports[`misc binding-for-new-vars 1`] = `
"var _fooJs = require('./foo.js');
var y = true;
function f() {
  return [_fooJs.x, y, console];
}"
`;

exports[`misc class-static-block 1`] = `
"class foo {
  static {
    this; // should not be replaced by undefined
  }
}"
`;

exports[`misc copy-getters-setters 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "Foo", {
  enumerable: true,
  get: function () {
    return function (m) {
      return m && m.__esModule ? m.default : m;
    }(_moduleWithGetter);
  }
});
Object.defineProperty(exports, "baz", {
  enumerable: true,
  get: function () {
    return _moduleWithGetter.baz;
  }
});
var _moduleWithGetter = require("./moduleWithGetter");
var Foo = _$$_IMPORT_DEFAULT("./moduleWithGetter");"
`;

exports[`misc copy-getters-setters-star 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var foo = _$$_IMPORT_ALL("./moduleWithGetter");
exports.foo = foo;"
`;

exports[`misc export-let-function-name 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
let a = function () {};
let b = function X() {};
let c = () => {};
let d = class {};
let e = class Y {};
exports.a = a;
exports.b = b;
exports.c = c;
exports.d = d;
exports.e = e;"
`;

exports[`misc export-let-function-name-with-fn-name-transform 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
let a = function () {};
let b = function X() {};
let c = () => {};
let d = class {};
let e = class Y {};
exports.a = a;
exports.b = b;
exports.c = c;
exports.d = d;
exports.e = e;"
`;

exports[`misc export-var-and-modify 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var a;
a += 1;
a -= 1;
a *= 1;
a /= 1;
a %= 1;
a **= 1;
a <<= 1;
a >>= 1;
a >>>= 1;
a &= 1;
a ^= 1;
a |= 1;
a &&= 1;
a ||= 1;
a ??= 1;
exports.a = a;"
`;

exports[`misc for-of-in-export 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
let foo;
for (foo of []) {}
for (foo in []) {}
for (foo of []) {
  let foo;
}
for ({
  foo
} of []) {}
for ({
  foo
} of []) {
  let foo;
}
for ({
  test: {
    foo
  }
} of []) {}
for ([foo, [...foo]] of []) {}
for ([foo, [...foo]] of []) {
  let foo;
}
for (foo of []);
{
  let foo;
  for (foo of []) {}
}
exports.foo = foo;
exports.bar = foo;"
`;

exports[`misc import-const-throw 1`] = `
"var Foo = _$$_IMPORT_DEFAULT("foo");
var Bar = _$$_IMPORT_ALL("bar");
var _baz = require("baz");
Foo = 42;
Bar = 43;
Baz = 44;
({
  Foo
} = {});
({
  Bar
} = {});
({
  Baz
} = {});
({
  prop: Foo
} = {});
({
  prop: Bar
} = {});
({
  prop: Baz
} = {});
Foo += 2;
Bar += 2;
Baz += 2;
Foo >>>= 3;
Bar >>>= 3;
Baz >>>= 3;
Foo &&= 4;
Bar &&= 4;
Baz &&= 4;
--Foo;
--Bar;
--_baz.Baz;
Foo++;
Bar++;
_baz.Baz++;
for (Foo in {});
for (Bar in {}) {}
for (_baz.Baz of []) {
  let Baz;
}
for ({
  Foo
} in {}) {}
for ([Bar] in {}) {}
for ([...Baz] in {}) {}"
`;

exports[`misc import-shadowed-assign 1`] = `
"var _x = require("x");
function f(foo) {
  foo = 2;
  [foo] = [];
  ({
    foo
  } = {});
}
foo = 2;
[foo] = [];
({
  foo
} = {});"
`;

exports[`misc keep-this-arrow-function 1`] = `"var foo = () => this;"`;

exports[`misc keep-this-computed-class-method-1 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
class C {
  [this.name]() {}
}
exports.C = C;"
`;

exports[`misc keep-this-computed-class-method-2 1`] = `
"class A {
  [() => this.name]() {}
}"
`;

exports[`misc keep-this-computed-class-method-3 1`] = `
"class A {
  [function () {
    this.name;
  }]() {}
}"
`;

exports[`misc keep-this-computed-class-property-name 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
class C {
  [this.name] = 42;
}
exports.C = C;"
`;

exports[`misc keep-this-root-call 1`] = `"this.foo();"`;

exports[`misc keep-this-root-declaration 1`] = `"var self = this;"`;

exports[`misc keep-this-root-reference 1`] = `"this;"`;

exports[`misc local-exports-decl-top-level 1`] = `
"require("foo");
var _exports = "local exports";
var _module = "local module";
console.log(_exports);
console.log(_exports.prop);
_exports++;
_exports += 4;
({
  exports: _exports
} = {});
[_exports] = [];
_exports = {};
_exports.prop = "";
console.log(_module);
console.log(_module.exports);
_module++;
_module += 4;
({
  module: _module
} = {});
[_module] = [];
_module = {};
_module.prop = "";"
`;

exports[`misc local-exports-decl-with-esm-exports 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _exports = 1;
let x = 2;
function fn() {
  x = 3;
  var exports = 4;
}
exports.x = x;"
`;

exports[`misc local-exports-inject-var-declarations 1`] = `""`;

exports[`misc local-exports-invalid-inject-undefined 1`] = `""`;

exports[`misc local-exports-var-declarations 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
{
  var A;
  switch (0) {
    case 1:
      var B;
      if (2) var C;
  }
}
exports.A = A;
exports.B = B;
exports.C = C;"
`;

exports[`misc module-exports 1`] = `
"require("foo");
console.log(exports);
console.log(exports.prop);
exports++;
exports += 4;
({
  exports
} = {});
[exports] = [];
exports = {};
exports.prop = "";
console.log(module);
console.log(module.exports);
module++;
module += 4;
({
  module
} = {});
[module] = [];
module = {};
module.prop = "";"
`;

exports[`misc reference-source-map 1`] = `
"var aDefault = _$$_IMPORT_DEFAULT("one");
var _two = require("two");
var _three = require("three");
var aNamespace = _$$_IMPORT_ALL("four");
console.log(aDefault);
console.log(_two.aNamed);
console.log(_three.orig);
console.log(aNamespace);
console.log(aDefault());
console.log(_two.aNamed());
console.log(_three.orig());
console.log(aNamespace());"
`;

exports[`shadowed-namespace-import transformed-name 1`] = `
"var e = _$$_IMPORT_ALL("mod");
var t = _$$_IMPORT_DEFAULT("mod");
const foo = e => {
  return {
    amount: t.format(1)
  };
};"
`;

exports[`update-expression bigint 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
let foo = 1n;
let bar = foo++;
let baz = ++bar;
expect(foo).toBe(2n);
expect(bar).toBe(2n);
expect(baz).toBe(2n);
--foo;
bar--;
baz--;
exports.foo = foo;
exports.bar = bar;
exports.baz = baz;
exports.foofoo = foo;
exports.barbar = bar;
exports.bazbaz = baz;"
`;

exports[`update-expression negative-suffix 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
let diffLevel = 0;
function diff() {
  if (! --diffLevel) {
    console.log("hey");
  }
}
exports.diffLevel = diffLevel;
exports.diff = diff;"
`;

exports[`update-expression positive-suffix 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
let diffLevel = 0;
function diff() {
  if (!++diffLevel) {
    console.log("hey");
  }
}
exports.diffLevel = diffLevel;
exports.diff = diff;"
`;
